--- a/M03/Assn/M03_Ch07-Ch09_try_7.4-9.2.ipynb
+++ b/M03/Assn/M03_Ch07-Ch09_try_7.4-9.2.ipynb
@@ -26,10 +26,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8e4900c6-00e8-45f8-8333-07edcfd209dc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['mozzarella', 'cinderella', 'salmonella']\n"
+     ]
+    }
+   ],
    "source": [
     "# THINGS TO DO\n",
     "\n",
@@ -42,10 +50,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "fa0985e0-9b27-4405-b96b-2cccd50ea457",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['mozzarella', 'Cinderella', 'salmonella']\n"
+     ]
+    }
+   ],
    "source": [
     "# 7.5 Capitalize the element in things that refers to a person and then print the list. \n",
     "# Did it change the element in the list?\n",
@@ -57,10 +73,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "0b08def4-101d-4abc-bc3e-e70f57374c0e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['MOZZARELLA', 'Cinderella', 'salmonella']\n"
+     ]
+    }
+   ],
    "source": [
     "# 7.6 Make the cheesy element of things all uppercase and then print the list.\n",
     "things[0] = things[0].upper()\n",
@@ -69,10 +93,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "1d09a7f2-94e6-4e53-bcb6-6e061013592b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['MOZZARELLA', 'Cinderella']\n"
+     ]
+    }
+   ],
    "source": [
     "# 7.7 Delete the disease element from things, collect your Nobel Prize, and print the list.\n",
     "del things[-1]\n",
@@ -81,10 +113,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "1c97712d-70e7-485d-914a-35871cabdb81",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Harry', 'Ron', 'Hermione']\n"
+     ]
+    }
+   ],
    "source": [
     "# 9.1 Define a function called good() that returns the following list: ['Harry', 'Ron', 'Hermione'].\n",
     "names = ['Harry', 'Ron', 'Hermione']\n",
@@ -97,10 +137,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "f20578fe-6e5e-42eb-9687-7dafd0a60cec",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In the range 0-10, the third odd integer is: 5\n"
+     ]
+    }
+   ],
    "source": [
     "# 9.2 Define a generator function called get_odds() that returns the odd numbers from range(10).\n",
     "# Use a for loop to find and print the third value returned.\n",
